update shift
