# app/api/endpoints/shift.py
@@ -1,11 +1,11 @@
-from typing import Optional, Union
+from typing import Union, Optional
 
 from fastapi import APIRouter, Depends
 from sqlalchemy.orm import Session
 from uuid import UUID
 
 from app.db.session import get_db
-from app.schemas.shift import ShiftOut, ShiftStartUpdate, ShiftEndUpdate
+from app.schemas.shift import ShiftOut
 from app.crud import shift as crud_shift
 from app.core.responses import response
 from app.services.authentication import get_user_id_from_token
@@ -19,13 +19,12 @@ router = APIRouter(prefix='/shifts', tags=['shifts'])
 # manager_app
 @router.get("/", response_model=list[ShiftOut])
 async def get_shifts(db: Session = Depends(get_db), user_id: str = Depends(get_user_id_from_token)):
-    shifts = crud_shift.get_shifts(db)
-    return shifts
+    return crud_shift.get_shifts(db)
 
 # barista_app
-@router.get("/active-shift/", response_model=Union[ShiftOut, None])
-async def get_active_shift(db: Session = Depends(get_db), user_id: str = Depends(get_user_id_from_token)):
-    return crud_shift.get_active_shift(db)
+@router.get("/active-shifts/", response_model=list[ShiftOut])
+async def get_active_shifts(db: Session = Depends(get_db), user_id: str = Depends(get_user_id_from_token)):
+    return crud_shift.get_active_shifts(db)
 
 # @router.get("/{shift_id}/", response_model=ShiftOut)
 # async def get_shift(shift_id: str, db: Session = Depends(get_db), user_id: str = Depends(get_user_id_from_token)):
